Time: 3 ms (15.19%) | Memory: 45.7 MB (11.88%) - LeetSync